--- a/.gitattributes
+++ b/.gitattributes
@@ -62,7 +62,4 @@
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
 
-*.C# linguist-detectable=true
- *.js linguist-detectable=false
- *.html linguist-detectable=false
- *.xml linguist-detectable=false
+static/* linguist-vendored
