--- a/.gitattributes
+++ b/.gitattributes
@@ -62,4 +62,5 @@
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
 
-static/* linguist-vendored
+*.html linguist-detectable=false
+*.c# linguist-detectable=true
